# CrossPlatformVstHost

./: .gitattributes  .gitignore  .gitmodules  CLONE.md  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: black-duck-security-scan-ci.yml  build_linux.yml  build_mac_os.yml  c-cpp.yml  clone_stats.yml  vst_host_ci.yml
VstHost_Android/: settings.gradle
VstHost_Android/app/: build.gradle
VstHost_Android/app/src/androidTest/java/com/rinoreyns/vsthost_android/: ExampleInstrumentedTest.java
VstHost_Android/app/src/common/java/com/rinoreyns/vsthost_android/common/: FilesCopier.java
VstHost_Android/app/src/main/: AndroidManifest.xml
VstHost_Android/app/src/main/cpp/: CMakeLists.txt  VstHostLibWrapper.cpp
VstHost_Android/app/src/main/java/com/rinoreyns/vsthost_android/: FirstFragment.java  MainActivity.java  SecondFragment.java
VstHost_Android/app/src/main/res/layout/: activity_main.xml
VstHost_Android/app/src/main/res/menu/: menu_main.xml
VstHost_Android/app/src/main/res/navigation/: nav_graph.xml
VstHost_Android/app/src/main/res/values/: strings.xml  themes.xml
VstHost_Android/app/src/main/res/values-night/: themes.xml
VstHost_Android/app/src/test/java/com/rinoreyns/vsthost_android/: ExampleUnitTest.java
VstHost_Android/gradle/wrapper/: gradle-wrapper.properties
VstHost_Python/: __init__.py  main.py  requirements.txt
VstHost_Python/Modules/: Common.py  Enums.py  VstHostLibWrapper.py
VstHost_Python/UnitTests/: test_c_api.py
VstHost_VisualC++/: CMakeLists.txt
VstHost_VisualC++/cmake/: andorid_toolchain.cmake  custom_functions.cmake
VstHost_VisualC++/doc/: Doxyfile
VstHost_VisualC++/external_modules/: CMakeLists.txt
VstHost_VisualC++/external_modules/RtAudio/: CMakeLists.txt
VstHost_VisualC++/modules/: CMakeLists.txt
VstHost_VisualC++/modules/ArgParser/: CMakeLists.txt
VstHost_VisualC++/modules/ArgParser/header/: VstHostConfigGenerator.h  arg_parser.h  argparser.hpp
VstHost_VisualC++/modules/ArgParser/src/: VstHostConfigGenerator.cpp  arg_parser.cpp
VstHost_VisualC++/modules/AudioCapture/: CMakeLists.txt
VstHost_VisualC++/modules/AudioCapture/header/: AudioCapture.h  WaveWriter.h
VstHost_VisualC++/modules/AudioCapture/source/: AudioCapture.cpp  WaveWriter.cpp
VstHost_VisualC++/modules/AudioEndpointBase/: CMakeLists.txt
VstHost_VisualC++/modules/AudioEndpointBase/header/: AudioEndpointBase.h
VstHost_VisualC++/modules/AudioEndpointBase/source/: AudioEndpointBase.cpp
VstHost_VisualC++/modules/AudioEndpointManager/: CMakeLists.txt
VstHost_VisualC++/modules/AudioEndpointManager/header/: AudioEndpointManager.h
VstHost_VisualC++/modules/AudioEndpointManager/source/: AudioEndpointManager.cpp
VstHost_VisualC++/modules/AudioProcessing/: CMakeLists.txt
VstHost_VisualC++/modules/AudioProcessing/header/: AudioProcessingWrapper.h  FilterWrapper.h  WaveProcessingPipeline.h
VstHost_VisualC++/modules/AudioProcessing/source/: AudioProcessingWrapper.cpp  FilterWrapper.cpp  WaveProcessingPipeline.cpp
VstHost_VisualC++/modules/AudioRender/: CMakeLists.txt
VstHost_VisualC++/modules/AudioRender/header/: AudioRender.h  WaveReader.h
VstHost_VisualC++/modules/AudioRender/source/: AudioRender.cpp  WaveReader.cpp
VstHost_VisualC++/modules/Common/: CMakeLists.txt
VstHost_VisualC++/modules/Common/header/: EndpointUtils.h  JsonUtils.h  MFMacro.h  StdAfx.h  Utils.h  VstHostMacro.h  enums.h
VstHost_VisualC++/modules/Common/src/: JsonUtils.cpp  Utils.cpp
VstHost_VisualC++/modules/Logger/: CMakeLists.txt
VstHost_VisualC++/modules/Logger/header/: easylogging++.h
VstHost_VisualC++/modules/Logger/src/: easylogging++.cc
VstHost_VisualC++/modules/UnitTests/: CMakeLists.txt
VstHost_VisualC++/modules/UnitTests/data/: adelay_config.json  adelay_config_second_plugin.json
VstHost_VisualC++/modules/UnitTests/header/: Common.h  UnitTestsCommon.h
VstHost_VisualC++/modules/UnitTests/src/: AudioHostLibUnitTests.cpp  AudioProcessingClassUnitTests.cpp  VstHostToolUnitTests.cpp
VstHost_VisualC++/modules/VstHost/: CMakeLists.txt
VstHost_VisualC++/modules/VstHost/header/: audiohost.h
VstHost_VisualC++/modules/VstHost/source/: audiohost.cpp
VstHost_VisualC++/modules/VstHostTool/: CMakeLists.txt
VstHost_VisualC++/modules/VstHostTool/header/: VstHostTool.h
VstHost_VisualC++/modules/VstHostTool/src/: VstHostTool.cpp  main.cpp
VstHost_VisualC++/modules/WaveIO/: CMakeLists.txt
VstHost_VisualC++/modules/WaveIO/header/: WaveIOClass.h  error.h  file.h  fmt_header.h  header.h  header_list.h
VstHost_VisualC++/modules/WaveIO/src/: WaveIOClass.cpp  file.cc  fmt_header.cc  header.cc  header_list.cc
VstHost_VisualC++/utils/: mem_leak_exclude.supp  mem_leak_exclude.txt
